objects/Proposed_Benefit_SBC__c.object
<CustomObject>
    <fields>
        <fullName>CPC__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Corporate Plan Code</inlineHelpText>
        <label>CPC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EPIC__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enhanced Privacy ID</inlineHelpText>
        <label>EPIC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EPID__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enhanced Privacy ID</inlineHelpText>
        <label>EPID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proposed_Benefit_ASO_or_FI__c</fullName>
        <label>Proposed Benefit ASO or FI</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposed_Benefit_CEP_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proposed Benefit CEP Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proposed_Benefit_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposed Benefit Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Proposed_Benefits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_Benefit_Deviations__c</fullName>
        <label>Proposed Benefit Deviations</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposed_Benefit_Plans_Requested__c</fullName>
        <label>Proposed Benefit Plans Requested</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposed_Benefit_Reason__c</fullName>
        <label>Proposed Benefit Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Funding Type Change</fullName>
                </value>
                <value>
                    <fullName>Adding a Product</fullName>
                </value>
                <value>
                    <fullName>Additional Benefit Change</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Off Anniversary Change</fullName>
                </value>
                <value>
                    <fullName>Legislative Change</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposed_Benefits_Sent_By_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Proposed Benefits Sent By Comments</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposed_Benefits__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Proposed Benefit/SBC</relationshipLabel>
        <relationshipName>Proposed_Benefits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Proposed_Received_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Proposed Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposed_Summary_Completion_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Proposed Summary Completion Date</label>
        <type>Date</type>
    </fields>
    <label>Proposed Benefit/SBC</label>
    <nameField>
        <displayFormat>PB/SBC-{0000}</displayFormat>
        <label>Proposed Benefit/SBC</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposed Benefit/SBC</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>